--- a/src/SelectData.ipynb
+++ b/src/SelectData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('./211 985.xlsx', names = ['names'])"
+    "df = pd.read_excel('../211 985.xlsx', names = ['names'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('./CSRanking_USA.xlsx')"
+    "df = pd.read_excel('../CSRanking_USA.xlsx')"
    ]
   },
   {
@@ -60,26 +60,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/gs/git-repos/University-Logo-Deep-Learning-Community-Detection/src'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "中国人民大学\n",
+      "清华大学\n",
+      "北京交通大学\n",
+      "北京工业大学\n",
+      "北京航空航天大学\n",
+      "北京理工大学\n",
+      "北京科技大学\n",
+      "北京化工大学\n",
+      "北京邮电大学\n",
+      "中国农业大学\n",
+      "北京林业大学\n",
+      "北京中医药大学\n",
+      "北京师范大学\n",
+      "北京外国语大学\n",
+      "中国传媒大学\n",
+      "中央财经大学\n",
+      "对外经济贸易大学\n",
+      "北京体育大学\n",
+      "中央音乐学院\n",
+      "中央民族大学\n",
+      "中国政法大学\n",
+      "华北电力大学\n",
+      "南开大学\n",
+      "天津大学\n",
+      "天津医科大学\n",
+      "河北工业大学\n",
+      "太原理工大学\n",
+      "内蒙古大学\n",
+      "辽宁大学\n",
+      "大连理工大学\n",
+      "东北大学\n",
+      "大连海事大学\n",
+      "吉林大学\n",
+      "延边大学\n",
+      "东北师范大学\n",
+      "哈尔滨工业大学\n",
+      "哈尔滨工程大学\n",
+      "东北农业大学\n",
+      "东北林业大学\n",
+      "复旦大学\n",
+      "同济大学\n",
+      "上海交通大学\n",
+      "华东理工大学\n",
+      "东华大学\n",
+      "华东师范大学\n",
+      "上海外国语大学\n",
+      "上海财经大学\n",
+      "上海大学\n",
       "第二军医大学 \n",
+      "南京大学\n",
+      "苏州大学\n",
+      "东南大学\n",
+      "南京航空航天大学\n",
+      "南京理工大学\n",
+      "中国矿业大学\n",
+      "河海大学\n",
+      "江南大学\n",
+      "南京农业大学\n",
+      "中国药科大学\n",
+      "南京师范大学\n",
+      "浙江大学\n",
+      "安徽大学\n",
+      "中国科学技术大学\n",
+      "合肥工业大学\n",
+      "厦门大学\n",
+      "福州大学\n",
+      "南昌大学\n",
+      "山东大学\n",
+      "中国海洋大学\n",
       "中国石油大学\n",
+      "郑州大学\n",
+      "武汉大学\n",
+      "华中科技大学\n",
       "中国地质大学\n",
+      "武汉理工大学\n",
+      "华中农业大学\n",
+      "华中师范大学\n",
+      "中南财经政法大学\n",
+      "湖南大学\n",
+      "中南大学\n",
+      "湖南师范大学\n",
       "国防科学技术大学\n",
+      "中山大学\n",
+      "暨南大学\n",
+      "华南理工大学\n",
+      "华南师范大学\n",
+      "广西大学\n",
+      "海南大学\n",
+      "四川大学\n",
+      "西南交通大学\n",
+      "电子科技大学\n",
+      "四川农业大学\n",
+      "西南财经大学\n",
+      "重庆大学\n",
+      "西南大学\n",
+      "贵州大学\n",
+      "云南大学\n",
+      "西藏大学\n",
+      "西北大学\n",
+      "西安交通大学\n",
+      "西北工业大学\n",
+      "西安电子科技大学\n",
+      "长安大学\n",
+      "西北农林科技大学\n",
+      "陕西师范大学\n",
       "第四军医大学\n",
-      "新疆大学\n"
+      "兰州大学\n",
+      "青海大学\n",
+      "宁夏大学\n",
+      "新疆大学\n",
+      "石河子大学\n"
      ]
     }
    ],
    "source": [
     "for sch in df.names:\n",
     "    try:\n",
-    "        copyfile(sch + '_China.jpeg', '../../selected_data/China/' + sch + '_China.jpeg')\n",
+    "        copyfile('../' + sch + '_China.jpeg', '../../Selected_data_raw/China/' + sch + '_China.jpeg')\n",
     "    except:\n",
     "        print(sch)"
    ]
