--- a/src/China-Sample-3d.ipynb
+++ b/src/China-Sample-3d.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dismat = np.load('./npydata/all_data_k_means/dismat.npy')"
+    "dismat = np.load('../Backend/static/npydata/cluster6/dismat.npy')"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = np.load('./npydata/all_data_k_means/names_train.npy')"
+    "names = np.load('../Backend/static/npydata/cluster6/names_train.npy')"
    ]
   },
   {
