--- a/src/SelectData.ipynb
+++ b/src/SelectData.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 中国选取211 985"
+    "### 本文件用于选取中国211 985 以及美国CSRanking 在前160名的学校的校徽，作为优质数据进行模型和算法的筛选。其后还进行了数据的预处理，包括切除纯色的边框，保存为RGB格式以及Resize\n",
+    "### This notebook is used to select the Chinese School of 211 and 985 program as well as the USA School from CSRanking 160th above as high equality data to process model and algorithm selection and comparetion. There are also data preprocess including cut the pure color edge, save with .jpeg(rgb) format and resize\n",
+    "\n",
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 中国选取211 985"
    ]
   },
   {
@@ -80,133 +90,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "中国人民大学\n",
-      "清华大学\n",
-      "北京交通大学\n",
-      "北京工业大学\n",
-      "北京航空航天大学\n",
-      "北京理工大学\n",
-      "北京科技大学\n",
-      "北京化工大学\n",
-      "北京邮电大学\n",
-      "中国农业大学\n",
-      "北京林业大学\n",
-      "北京中医药大学\n",
-      "北京师范大学\n",
-      "北京外国语大学\n",
-      "中国传媒大学\n",
-      "中央财经大学\n",
-      "对外经济贸易大学\n",
-      "北京体育大学\n",
-      "中央音乐学院\n",
-      "中央民族大学\n",
-      "中国政法大学\n",
-      "华北电力大学\n",
-      "南开大学\n",
-      "天津大学\n",
-      "天津医科大学\n",
-      "河北工业大学\n",
-      "太原理工大学\n",
-      "内蒙古大学\n",
-      "辽宁大学\n",
-      "大连理工大学\n",
-      "东北大学\n",
-      "大连海事大学\n",
-      "吉林大学\n",
-      "延边大学\n",
-      "东北师范大学\n",
-      "哈尔滨工业大学\n",
-      "哈尔滨工程大学\n",
-      "东北农业大学\n",
-      "东北林业大学\n",
-      "复旦大学\n",
-      "同济大学\n",
-      "上海交通大学\n",
-      "华东理工大学\n",
-      "东华大学\n",
-      "华东师范大学\n",
-      "上海外国语大学\n",
-      "上海财经大学\n",
-      "上海大学\n",
-      "第二军医大学 \n",
-      "南京大学\n",
-      "苏州大学\n",
-      "东南大学\n",
-      "南京航空航天大学\n",
-      "南京理工大学\n",
-      "中国矿业大学\n",
-      "河海大学\n",
-      "江南大学\n",
-      "南京农业大学\n",
-      "中国药科大学\n",
-      "南京师范大学\n",
-      "浙江大学\n",
-      "安徽大学\n",
-      "中国科学技术大学\n",
-      "合肥工业大学\n",
-      "厦门大学\n",
-      "福州大学\n",
-      "南昌大学\n",
-      "山东大学\n",
-      "中国海洋大学\n",
-      "中国石油大学\n",
-      "郑州大学\n",
-      "武汉大学\n",
-      "华中科技大学\n",
-      "中国地质大学\n",
-      "武汉理工大学\n",
-      "华中农业大学\n",
-      "华中师范大学\n",
-      "中南财经政法大学\n",
-      "湖南大学\n",
-      "中南大学\n",
-      "湖南师范大学\n",
-      "国防科学技术大学\n",
-      "中山大学\n",
-      "暨南大学\n",
-      "华南理工大学\n",
-      "华南师范大学\n",
-      "广西大学\n",
-      "海南大学\n",
-      "四川大学\n",
-      "西南交通大学\n",
-      "电子科技大学\n",
-      "四川农业大学\n",
-      "西南财经大学\n",
-      "重庆大学\n",
-      "西南大学\n",
-      "贵州大学\n",
-      "云南大学\n",
-      "西藏大学\n",
-      "西北大学\n",
-      "西安交通大学\n",
-      "西北工业大学\n",
-      "西安电子科技大学\n",
-      "长安大学\n",
-      "西北农林科技大学\n",
-      "陕西师范大学\n",
-      "第四军医大学\n",
-      "兰州大学\n",
-      "青海大学\n",
-      "宁夏大学\n",
-      "新疆大学\n",
-      "石河子大学\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for sch in df.names:\n",
     "    try:\n",
     "        copyfile('../' + sch + '_China.jpeg', '../../Selected_data_raw/China/' + sch + '_China.jpeg')\n",
     "    except:\n",
     "        print(sch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------\n",
+    "> 由于原始数据并没有保存，所以通过直接复制的办法并不好，全部都是已经经过resize的数据    \n",
+    "> 所以针对美国的数据进行重新爬取\n",
+    "--------"
    ]
   },
   {
@@ -243,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,12 +172,12 @@
     "            browser.close()\n",
     "            browser = webdriver.Chrome()\n",
     "        count += 1\n",
-    "        #try:\n",
-    "        url = getUrl(browser, school, keywords)\n",
-    "        datatype = re.findall(r'image/.+?;', url)[0][6:-1]\n",
-    "        downloadImg(url, 'selected_data/{}/'.format(country), school, datatype)\n",
-    "        #except:\n",
-    "        print('\\nUniversity :' + school + '    failed\\n')\n",
+    "        try:\n",
+    "            url = getUrl(browser, school, keywords)\n",
+    "            datatype = re.findall(r'image/.+?;', url)[0][6:-1]\n",
+    "            downloadImg(url, 'selected_data/{}/'.format(country), school, datatype)\n",
+    "        except:\n",
+    "            print('\\nUniversity :' + school + '    failed\\n')\n",
     "        continue\n",
     "        #print('University : ' + school + '     Success')"
    ]
@@ -322,12 +224,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 处理得到的数据"
+    "# 处理得到的数据\n",
+    "### 对爬取到的数据进行**切边**、**转换类型**、**Resize**等处理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,20 +306,11 @@
     "            #if sch.endswith('png') or im.format == 'JPEG' or im.format == 'JPG':\n",
     "            result = result.convert('RGB') # 转换格式为RGB\n",
     "            result = result.resize((200, 200)) # resize\n",
-    "    #       os.remove(sch) # 删除原有图片\n",
+    "            os.remove(sch) # 删除原有图片\n",
     "\n",
     "            result.save('../data_200/{}_{}.jpeg'.format(school[:-5], country) )\n",
-    "        \n",
-    "        \n",
     "        os.chdir('../')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -435,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
